--- a/ollamaRAG.ipynb
+++ b/ollamaRAG.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -99,9 +99,7 @@
     }
    ],
    "source": [
-    "from sentence_transformers import SentenceTransformer\n",
-    "import faiss, pickle, numpy as np\n",
-    "from tqdm import tqdm\n",
+    "\n",
     "\n",
     "index_path = VDB_DIR / \"index.faiss\"\n",
     "\n",
@@ -171,126 +169,278 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def corag_answer(claim: str, max_steps: int = 6) -> List[Dict]:\n",
-    "    qa_pairs = []\n",
-    "    q = ollama_chat(f\"Given the claim:\\n\\\"{claim}\\\"\\nGenerate one focused question to help verify it.\")\n",
-    "    for _ in range(max_steps):\n",
-    "        hits = retrieve(q, k=5)\n",
-    "        context = \"\\n\".join([f\"[{h['score']:.2f}] {h.get('text') or h.get('ocr_text') or h['data']}\" for h in hits])\n",
-    "        a = ollama_chat(f\"Claim: {claim}\\nQuestion: {q}\\nEvidence snippets:\\n{context}\\nAnswer the question succinctly.\")\n",
-    "        qa_pairs.append({\"q\": q, \"a\": a, \"evidence\": hits})\n",
-    "        follow = ollama_chat(\n",
-    "            f\"Claim: {claim}\\nCollected Q/A so far:\\n{json.dumps(qa_pairs, indent=2)}\\n\"\n",
-    "            \"Is the evidence sufficient to decide the claim? Answer only yes or no.\"\n",
-    "        )\n",
-    "        if follow.lower().startswith(\"y\"):\n",
-    "            break\n",
-    "        q = ollama_chat(\n",
-    "            f\"Claim: {claim}\\nGiven the evidence and answers so far:\\n{json.dumps(qa_pairs, indent=2)}\\n\"\n",
-    "            \"Ask one follow‑up question that would best help verify the claim.\"\n",
-    "        )\n",
-    "    return qa_pairs\n",
-    "\n",
-    "def torag_answer(claim: str, max_steps: int = 6, branches: int = 3) -> List[Dict]:\n",
-    "    best_pairs = []\n",
-    "    qs = [ollama_chat(f\"Claim: \\\"{claim}\\\"\\nGenerate question #{i+1} to verify.\") for i in range(branches)]\n",
-    "    for _ in range(max_steps):\n",
-    "        branch_pairs = []\n",
-    "        for q in qs:\n",
-    "            hits = retrieve(q, k=5)\n",
-    "            ctx = \"\\n\".join([f\"[{h['score']:.2f}] {h.get('text') or h.get('ocr_text') or h['data']}\" for h in hits])\n",
-    "            a = ollama_chat(f\"Claim: {claim}\\nQuestion: {q}\\nEvidence:\\n{ctx}\\nAnswer succinctly.\")\n",
-    "            branch_pairs.append({\"q\": q, \"a\": a, \"evidence\": hits})\n",
-    "        # elimination\n",
-    "        prompt = (\n",
-    "            f\"Claim: {claim}\\nHere are {len(branch_pairs)} question‑answer pairs with evidence.\\n\"\n",
-    "            f\"{json.dumps(branch_pairs, indent=2)}\\n\"\n",
-    "            \"Select the single pair most helpful to verify the claim. Return its index (0‑based).\"\n",
-    "        )\n",
-    "        idx = int(re.findall(r'\\d+', ollama_chat(prompt))[0])\n",
-    "        best = branch_pairs[idx]\n",
-    "        best_pairs.append(best)\n",
-    "        follow = ollama_chat(\n",
-    "            f\"Claim: {claim}\\nBest pairs so far:\\n{json.dumps(best_pairs, indent=2)}\\n\"\n",
-    "            \"Is the evidence now sufficient? Answer yes or no.\"\n",
-    "        )\n",
-    "        if follow.lower().startswith(\"y\"):\n",
-    "            break\n",
-    "        # new follow‑up questions\n",
-    "        qs = [\n",
-    "            ollama_chat(\n",
-    "                f\"Claim: {claim}\\nCurrent best evidence:\\n{json.dumps(best_pairs, indent=2)}\\n\"\n",
-    "                f\"Generate follow‑up question #{i+1}.\"\n",
-    "            )\n",
-    "            for i in range(branches)\n",
-    "        ]\n",
-    "    return best_pairs"
+    "# def corag_answer(claim: str, max_steps: int = 6) -> List[Dict]:\n",
+    "#     qa_pairs = []\n",
+    "#     q = ollama_chat(f\"Given the claim:\\n\\\"{claim}\\\"\\nGenerate one focused question to help verify it.\")\n",
+    "#     for _ in range(max_steps):\n",
+    "#         hits = retrieve(q, k=5)\n",
+    "#         context = \"\\n\".join([f\"[{h['score']:.2f}] {h.get('text') or h.get('ocr_text') or h['data']}\" for h in hits])\n",
+    "#         a = ollama_chat(f\"Claim: {claim}\\nQuestion: {q}\\nEvidence snippets:\\n{context}\\nAnswer the question succinctly.\")\n",
+    "#         qa_pairs.append({\"q\": q, \"a\": a, \"evidence\": hits})\n",
+    "#         follow = ollama_chat(\n",
+    "#             f\"Claim: {claim}\\nCollected Q/A so far:\\n{json.dumps(qa_pairs, indent=2)}\\n\"\n",
+    "#             \"Is the evidence sufficient to decide the claim? Answer only yes or no.\"\n",
+    "#         )\n",
+    "#         if follow.lower().startswith(\"y\"):\n",
+    "#             break\n",
+    "#         q = ollama_chat(\n",
+    "#             f\"Claim: {claim}\\nGiven the evidence and answers so far:\\n{json.dumps(qa_pairs, indent=2)}\\n\"\n",
+    "#             \"Ask one follow‑up question that would best help verify the claim.\"\n",
+    "#         )\n",
+    "#     return qa_pairs\n",
+    "# def torag_answer(claim: str, max_steps: int = 6, branches: int = 3) -> List[Dict]:\n",
+    "#     best_pairs = []\n",
+    "#     qs = [ollama_chat(f\"Claim: \\\"{claim}\\\"\\nGenerate question #{i+1} to verify.\") for i in range(branches)]\n",
+    "#     for _ in range(max_steps):\n",
+    "#         branch_pairs = []\n",
+    "#         for q in qs:\n",
+    "#             hits = retrieve(q, k=5)\n",
+    "#             ctx = \"\\n\".join([f\"[{h['score']:.2f}] {h.get('text') or h.get('ocr_text') or h['data']}\" for h in hits])\n",
+    "#             a = ollama_chat(f\"Claim: {claim}\\nQuestion: {q}\\nEvidence:\\n{ctx}\\nAnswer succinctly.\")\n",
+    "#             branch_pairs.append({\"q\": q, \"a\": a, \"evidence\": hits})\n",
+    "#         # elimination\n",
+    "#         prompt = (\n",
+    "#             f\"Claim: {claim}\\nHere are {len(branch_pairs)} question‑answer pairs with evidence.\\n\"\n",
+    "#             f\"{json.dumps(branch_pairs, indent=2)}\\n\"\n",
+    "#             \"Select the single pair most helpful to verify the claim. Return its index (0‑based).\"\n",
+    "#         )\n",
+    "#         idx = int(re.findall(r'\\d+', ollama_chat(prompt))[0])\n",
+    "#         best = branch_pairs[idx]\n",
+    "#         best_pairs.append(best)\n",
+    "#         follow = ollama_chat(\n",
+    "#             f\"Claim: {claim}\\nBest pairs so far:\\n{json.dumps(best_pairs, indent=2)}\\n\"\n",
+    "#             \"Is the evidence now sufficient? Answer yes or no.\"\n",
+    "#         )\n",
+    "#         if follow.lower().startswith(\"y\"):\n",
+    "#             break\n",
+    "#         # new follow‑up questions\n",
+    "#         qs = [\n",
+    "#             ollama_chat(\n",
+    "#                 f\"Claim: {claim}\\nCurrent best evidence:\\n{json.dumps(best_pairs, indent=2)}\\n\"\n",
+    "#                 f\"Generate follow‑up question #{i+1}.\"\n",
+    "#             )\n",
+    "#             for i in range(branches)\n",
+    "#         ]\n",
+    "#     return best_pairs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "def decide_claim(claim: str, qa_pairs: List[Dict]) -> Dict:\n",
     "    prompt = (\n",
     "        f\"Claim: {claim}\\nEvidence Q/A:\\n{json.dumps(qa_pairs, indent=2)}\\n\"\n",
     "        \"Based on the evidence, respond with JSON {{\\\"verdict\\\": \\\"supported|refuted|failed\\\", \"\n",
     "        \"\\\"explanation\\\": \\\"concise justification\\\"}}\"\n",
     "    )\n",
-    "    return json.loads(ollama_chat(prompt, temperature=0.1))"
+    "    return json.loads(ollama_chat(prompt, temperature=0.1))\n",
+    "\n",
+    "claims = json.load(CLAIMS_JSON.open())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def infer_matches_for_claim(claim: str, candidates: List[Dict]) -> List[Dict]:\n",
+    "    \"\"\"\n",
+    "    For a given claim and its candidate evidence, use Mistral (via ollama_chat) to determine\n",
+    "    which clinical evidence snippets best support the claim. Each match output has keys:\n",
+    "      - document_name: source document name,\n",
+    "      - matching_text: the text snippet from the evidence,\n",
+    "      - score: the similarity score from the retrieval.\n",
+    "    Output is a JSON array.\n",
+    "    \"\"\"\n",
+    "    evidence_str = \"\\n\".join(\n",
+    "        [f\"[{c['score']:.2f}] Document: {c.get('source_pdf', 'Unknown')} | Text: {c.get('text') or ' '.join(sum(c.get('data', []), [])) or c.get('ocr_text', '')}\"\n",
+    "         for c in candidates]\n",
+    "    )\n",
+    "    \n",
+    "    prompt = f\"\"\"\n",
+    "You are provided with a marketing claim and several candidate clinical evidence snippets extracted from various documents.\n",
+    "Your task is to select the snippets that best support the claim. A claim may be supported by multiple pieces of evidence.\n",
+    "For each supporting snippet, output a JSON object with the following keys:\n",
+    "- \"document_name\": the name of the clinical document,\n",
+    "- \"matching_text\": the exact text of the evidence snippet,\n",
+    "- \"score\": the similarity score (as provided).\n",
+    "If no evidence is relevant, output an empty JSON array.\n",
+    "\n",
+    "Claim:\n",
+    "\"{claim}\"\n",
+    "\n",
+    "Candidate Evidence:\n",
+    "{evidence_str}\n",
+    "\n",
+    "Return only a valid JSON array.\n",
+    "\"\"\"\n",
+    "    response = ollama_chat(prompt, temperature=0.0)\n",
+    "    try:\n",
+    "        matches = json.loads(response)\n",
+    "    except Exception as e:\n",
+    "        print(\"Error parsing JSON from LLM response for claim:\")\n",
+    "        print(claim)\n",
+    "        print(\"Response was:\", response)\n",
+    "        matches = []\n",
+    "    return matches\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "CoRAG:   0%|          | 0/9 [00:00<?, ?it/s]\n"
+      "Processing claims: 100%|██████████| 9/9 [02:12<00:00, 14.67s/it]"
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "corag_answer() missing 1 required positional argument: 'model'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[17]\u001b[39m\u001b[32m, line 9\u001b[39m\n\u001b[32m      7\u001b[39m \u001b[38;5;66;03m# -------- CoRAG pass ----------------------------------------------------\u001b[39;00m\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m c \u001b[38;5;129;01min\u001b[39;00m tqdm(claims[\u001b[33m\"\u001b[39m\u001b[33mclaims\u001b[39m\u001b[33m\"\u001b[39m], desc=\u001b[33m\"\u001b[39m\u001b[33mCoRAG\u001b[39m\u001b[33m\"\u001b[39m):\n\u001b[32m----> \u001b[39m\u001b[32m9\u001b[39m     qa  = \u001b[43mcorag_answer\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtext\u001b[49m\u001b[43m=\u001b[49m\u001b[43mc\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mclaim\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m       \u001b[38;5;66;03m# ← keyword arg fixes TypeError\u001b[39;00m\n\u001b[32m     10\u001b[39m     res = decide_claim(c[\u001b[33m\"\u001b[39m\u001b[33mclaim\u001b[39m\u001b[33m\"\u001b[39m], qa)\n\u001b[32m     11\u001b[39m     write_jsonl(Path(\u001b[33m\"\u001b[39m\u001b[33mcorag_out.jsonl\u001b[39m\u001b[33m\"\u001b[39m),\n\u001b[32m     12\u001b[39m                 {\u001b[33m\"\u001b[39m\u001b[33mclaim\u001b[39m\u001b[33m\"\u001b[39m: c[\u001b[33m\"\u001b[39m\u001b[33mclaim\u001b[39m\u001b[33m\"\u001b[39m], \u001b[33m\"\u001b[39m\u001b[33mqa\u001b[39m\u001b[33m\"\u001b[39m: qa, **res})\n",
-      "\u001b[31mTypeError\u001b[39m: corag_answer() missing 1 required positional argument: 'model'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Results saved to outputs/ollama_results.json\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
-    "corag_model = load_corag_model()   # whatever your real loader is\n",
-    "torag_model = load_torag_model()\n",
+    "with CLAIMS_JSON.open(\"r\", encoding=\"utf-8\") as f:\n",
+    "    marketing_claims = json.load(f)\n",
     "\n",
-    "def write_jsonl(path: Path, rec: dict):\n",
-    "    with path.open(\"a\", encoding=\"utf‑8\") as f:\n",
-    "        f.write(json.dumps(rec, ensure_ascii=False) + \"\\n\")\n",
+    "final_results = {\"claims\": []}\n",
     "\n",
-    "# CoRAG pass ──────────────────────────────────────────────────\n",
-    "for c in tqdm(claims[\"claims\"], desc=\"CoRAG\"):\n",
-    "    qa  = corag_answer(corag_model, c[\"claim\"])   # model first!\n",
-    "    res = decide_claim(c[\"claim\"], qa)\n",
-    "    write_jsonl(Path(\"corag_out.jsonl\"),\n",
-    "                {\"claim\": c[\"claim\"], \"qa\": qa, **res})\n",
+    "for c in tqdm(marketing_claims[\"claims\"], desc=\"Processing claims\"):\n",
+    "    claim_text = c[\"claim\"]\n",
+    "    \n",
+    "    # Retrieve candidates from your prebuilt FAISS index\n",
+    "    candidates = retrieve(claim_text, k=5)  # Adjust k as needed\n",
+    "    \n",
+    "    # Use the LLM (Mistral) to infer the best matching evidence from the candidates\n",
+    "    match_sources = infer_matches_for_claim(claim_text, candidates)\n",
+    "    \n",
+    "    final_results[\"claims\"].append({\n",
+    "        \"claim\": claim_text,\n",
+    "        \"match_sources\": match_sources\n",
+    "    })\n",
     "\n",
-    "# ToRAG pass ─────────────────────────────────────────────────\n",
-    "for c in tqdm(claims[\"claims\"], desc=\"ToRAG\"):\n",
-    "    qa  = torag_answer(torag_model, c[\"claim\"])\n",
-    "    res = decide_claim(c[\"claim\"], qa)\n",
-    "    write_jsonl(Path(\"torag_out.jsonl\"),\n",
-    "                {\"claim\": c[\"claim\"], \"qa\": qa, **res})"
+    "# Save final results as JSON\n",
+    "output_file = OUTPUT_DIR / \"ollama_results.json\"\n",
+    "with output_file.open(\"w\", encoding=\"utf-8\") as f:\n",
+    "    json.dump(final_results, f, ensure_ascii=False, indent=2)\n",
+    "\n",
+    "print(f\"Results saved to {output_file}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def infer_matches_with_reason(claim: str, candidates: List[Dict]) -> List[Dict]:\n",
+    "    \"\"\"\n",
+    "    Uses Mistral via ollama to infer support and reasoning per candidate match.\n",
+    "    Returns list of dicts with fields: document_name, matching_text, score, supports, reason\n",
+    "    \"\"\"\n",
+    "    evidence_str = \"\\n\".join(\n",
+    "        [f\"[{c['score']:.2f}] Document: {c.get('source_pdf', 'Unknown')} | Text: {c.get('text') or ' '.join(sum(c.get('data', []), [])) or c.get('ocr_text', '')}\"\n",
+    "         for c in candidates]\n",
+    "    )\n",
+    "\n",
+    "    prompt = f\"\"\"\n",
+    "You are provided with a marketing claim and a list of candidate evidence snippets from clinical documents.\n",
+    "\n",
+    "Your task is to analyze whether each snippet supports the claim. For each, output a JSON object with:\n",
+    "- \"document_name\": source document name,\n",
+    "- \"matching_text\": the full evidence text,\n",
+    "- \"score\": similarity score (float),\n",
+    "- \"supports\": true or false (does it support the claim?),\n",
+    "- \"reason\": 1–2 sentence explanation.\n",
+    "\n",
+    "Here is the claim:\n",
+    "\"{claim}\"\n",
+    "\n",
+    "Candidate Evidence:\n",
+    "{evidence_str}\n",
+    "\n",
+    "Return only a JSON array of decisions, one per candidate.\n",
+    "    \"\"\".strip()\n",
+    "\n",
+    "    try:\n",
+    "        response = ollama_chat(prompt, temperature=0.0)\n",
+    "        return json.loads(response)\n",
+    "    except Exception as e:\n",
+    "        print(\" JSON parsing failed for claim:\", claim)\n",
+    "        print(\"Raw response:\", response)\n",
+    "        return []\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Running LLM with reasoning: 100%|██████████| 9/9 [09:18<00:00, 62.00s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Saved to outputs/ollama2_results.json\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "with CLAIMS_JSON.open(\"r\", encoding=\"utf-8\") as f:\n",
+    "    marketing_claims = json.load(f)\n",
+    "\n",
+    "enhanced_results = {\"claims\": []}\n",
+    "\n",
+    "for c in tqdm(marketing_claims[\"claims\"], desc=\"Running LLM with reasoning\"):\n",
+    "    claim_text = c[\"claim\"]\n",
+    "    candidates = retrieve(claim_text, k=7)  # optional: increase k\n",
+    "    detailed_matches = infer_matches_with_reason(claim_text, candidates)\n",
+    "\n",
+    "    enhanced_results[\"claims\"].append({\n",
+    "        \"claim\": claim_text,\n",
+    "        \"match_sources\": detailed_matches\n",
+    "    })\n",
+    "\n",
+    "# Save to outputs/ollama2_results.json\n",
+    "with (OUTPUT_DIR / \"ollama2_results.json\").open(\"w\", encoding=\"utf-8\") as f:\n",
+    "    json.dump(enhanced_results, f, ensure_ascii=False, indent=2)\n",
+    "\n",
+    "print(\"✅ Saved to outputs/ollama2_results.json\")\n"
    ]
   },
   {
